* New first time screen
* New key creation screen: autocompletion of name and email based on your personal Android accounts
* File encryption: awesome new design, support for encrypting multiple files
* New icons to show status of key (by Brennan Novak)
* Important bug fix: Importing of large key collections from a file is now possible
* Notification showing cached passphrases

This release wouldn't be possible without the work of Vincent Breitmoser (GSoC 2014), mar-v-in (GSoC 2014), Daniel Albert, Art O Cathain, Daniel Haß, Tim Bray, Thialfihar


2.7
* Purple! (Dominik, Vincent)
* New key view design (Dominik, Vincent)
* New flat Android buttons (Dominik, Vincent)
* API fixes (Dominik)
* Keybase.io import (Tim Bray)

2.6.1
* Some fixes for regression bugs

2.6
* Key certifications (thanks to Vincent Breitmoser)
* Support for GnuPG partial secret keys (thanks to Vincent Breitmoser)
* New design for signature verification
* Custom key length (thanks to Greg Witczak)
* Fix share-functionality from other apps

2.5
* Fix decryption of symmetric pgp messages/files
* Refactored key edit screen (thanks to Ash Hughes)
* New modern design for encrypt/decrypt screens
* OpenPGP API version 3 (multiple api accounts, internal fixes, key lookup)

2.4
Thanks to all applicants of Google Summer of Code 2014 who made this release feature rich and bug free!
Besides several small patches, a notable number of patches are made by the following people (in alphabetical order):
Daniel Hammann, Daniel Haß, Greg Witczak, Miroojin Bakshi, Nikhil Peter Raj, Paul Sarbinowski, Sreeram Boyapati, Vincent Breitmoser.
* New unified key list
* Colorized key fingerprint
* Support for keyserver ports
* Deactivate possibility to generate weak keys
* Much more internal work on the API
* Certify user ids
* Keyserver query based on machine-readable output
* Lock navigation drawer on tablets
* Suggestions for emails on creation of keys
* Search in public key lists
* And much more improvements and fixes…
